src/test/deca/context/valid/improvided/if_then_else.deca
// Description :
//	test d'un simple if else. 	
// Resultats :
// 	ok
{
	int x = 3;
	if (x == 3){
		print(x);
}
	else {
		print(x-1);	
}
}
